@@ -1,12 +1,27 @@
+import static org.gradle.api.JavaVersion.VERSION_17
+
 buildscript { //properties that you need to build the project
 
-    ext.artifactory_contextUrl = 'https://software.r3.com/artifactory'
+    ext {
+        test_module_opens = [
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED'
+        ]
+        test_module_exports = [
+                '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
+    }
 
     repositories {
         mavenLocal()
         mavenCentral()
         jcenter()
-        maven { url "${artifactory_contextUrl}/corda-releases" }
+        maven { url "${publicArtifactURL}/corda-releases" }
     }
 
     dependencies {
@@ -18,7 +33,7 @@ buildscript { //properties that you need to build the project
 }
 
 plugins {
-    id "com.jfrog.artifactory" version "4.7.5"
+    id "org.ajoberstar.grgit" version "4.0.0"
 }
 
 // You can define this property in ~/.gradle/gradle.properties on your dev box.
@@ -35,27 +50,94 @@ if (! project.hasProperty('cordaArtifactoryPassword') || !ext.cordaArtifactoryPa
             ?: System.getProperty('corda.artifactory.password')
 }
 
-allprojects { //Properties that you need to compile your project (The application)
-    version reissuance_version
-    group reissuance_group
+// If the command line project option -PversionFromGit is added to the gradle invocation, we'll resolve
+// the latest git commit hash and timestamp and create a version postfix from that
+if (project.hasProperty("versionFromGit")) {
+    ext.versionSuffix = "${grgit.head().dateTime.format("yyyyMMdd_HHmmss")}-${grgit.head().abbreviatedId}"
+}
+
+if (ext.versionSuffix != "") {
+    ext.reissuance_version = "${ext.baseVersion}-${ext.versionSuffix}".toString()
+} else {
+    ext.reissuance_version = "${ext.baseVersion}".toString()
+}
+
+allprojects { //Properties that you need to implementation your project (The application)
+    version "$reissuance_version"
 
     apply from: "${rootProject.projectDir}/repositories.gradle"
-    apply plugin: 'kotlin'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'net.corda.plugins.quasar-utils'
 
     repositories {
         mavenLocal()
         jcenter()
         mavenCentral()
-        maven { url "${artifactory_contextUrl}/corda" }
         maven { url "https://jitpack.io" }
-        maven { url "${artifactory_contextUrl}/corda-lib" }
+        maven { url "${publicArtifactURL}/corda" }
+        maven {
+            url "${publicArtifactURL}/corda-lib"
+            mavenContent {
+                releasesOnly()
+            }
+        }
+        maven { url "${publicArtifactURL}/corda-dependencies" }
+        maven {
+            url "${artifactoryContextUrl}/corda-dev"
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
+        maven {
+            url "${artifactoryContextUrl}/corda-lib-dev"
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
+    }
+
+    quasar {
+        excludePackages.addAll(
+                "antlr**",
+                "com.codahale**",
+                "com.fasterxml.**",
+                "com.github.benmanes.caffeine.**",
+                "com.google.**",
+                "com.lmax.**",
+                "com.zaxxer.**",
+                "net.bytebuddy**",
+                "io.github.classgraph**",
+                "io.netty*",
+                "liquibase**",
+                "net.i2p.crypto.**",
+                "nonapi.io.github.classgraph.**",
+                "org.apiguardian.**",
+                "org.bouncycastle**",
+                "org.codehaus.**",
+                "org.h2**",
+                "org.hibernate**",
+                "org.jboss.**",
+                "org.objenesis**",
+                "org.w3c.**",
+                "org.xml**",
+                "org.yaml**",
+                "rx**",
+                "kotlin**"
+        )
+    }
+
+    test {
+        jvmArgs test_module_opens
+        jvmArgs test_module_exports
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
         kotlinOptions {
-            languageVersion = "1.2"
-            apiVersion = "1.2"
-            jvmTarget = "1.8"
+            languageVersion = "1.8"
+            apiVersion = "1.8"
+            jvmTarget = VERSION_17
             javaParameters = true   // Useful for reflection.
         }
     }
@@ -69,7 +151,12 @@ allprojects { //Properties that you need to compile your project (The applicatio
 
 apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
-apply plugin: 'net.corda.plugins.quasar-utils'
+apply plugin: 'corda.root-publish'
+
+cordapp {
+    targetPlatformVersion corda_platform_version.toInteger()
+    minimumPlatformVersion corda_platform_version.toInteger()
+}
 
 sourceSets {
     main {
@@ -82,9 +169,9 @@ sourceSets {
 //Module dependencis
 dependencies {
     // Corda dependencies.
-    cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaRuntime "$corda_release_group:corda-node-api:$corda_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
+    cordaProvided "$corda_release_group:corda-core:$corda_release_version"
+    cordaRuntimeOnly "$corda_release_group:corda-node-api:$corda_release_version"
+    cordaRuntimeOnly "$corda_release_group:corda:$corda_release_version"
 
     // CorDapp dependencies.
     cordapp project(":workflows")
@@ -92,9 +179,9 @@ dependencies {
     cordapp project(":dummy_contracts")
     cordapp project(":dummy_workflows")
 
-    cordaCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
-    cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
-    cordaCompile "org.slf4j:jul-to-slf4j:$slf4j_version"
+    cordaProvided "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+    cordaProvided "org.apache.logging.log4j:log4j-web:${log4j_version}"
+    cordaProvided "org.slf4j:jul-to-slf4j:$slf4j_version"
 
     // CI dependencies
     cordapp "$confidential_id_release_group:ci-workflows:$confidential_id_release_version"
@@ -196,16 +283,15 @@ def publishProjects = [
 ]
 
 configure(publishProjects) { subproject ->
-    apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.artifactory'
+    apply plugin: 'corda.common-publishing'
 
     task sourceJar(type: Jar, dependsOn: subproject.classes) {
-        classifier = 'sources'
+        archiveClassifier = 'sources'
         from sourceSets.main.allSource
     }
 
     task javadocJar(type: Jar, dependsOn: subproject.javadoc) {
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
         from javadoc.destinationDir
     }
 
@@ -224,24 +310,6 @@ configure(publishProjects) { subproject ->
                 pom {
                     description = subproject.description
                 }
-            }
-        }
-    }
-}
-
-
-artifactory {
-    publish {
-        contextUrl = "${artifactory_contextUrl}"
-        repository {
-            repoKey = project.hasProperty("publishRepo") ? project.property("publishRepo") : ""
-            username = cordaArtifactoryUsername
-            password = cordaArtifactoryPassword
-        }
-
-        defaults {
-            if (publishProjects.contains(project)) {
-                publications(project.name)
             }
         }
     }
